[package]
name = "ttrack-pro"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "Rust terminal session recorder and audit daemon compatible with ttrack behavior"

[[bin]]
name = "ttrack"
path = "src/main.rs"

[[bin]]
name = "ttrackd"
path = "src/bin/ttrackd.rs"

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hex = "0.4"
nix = { version = "0.29", features = ["fs", "socket", "user"] }
portable-pty = "0.8"
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
zeroize = "1.8"
