[package]
name = "ttrack-pro"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "Rust terminal session recorder and audit daemon compatible with ttrack behavior"

[[bin]]
name = "ttrack"
path = "src/main.rs"

[[bin]]
name = "ttrackd"
path = "src/bin/ttrackd.rs"

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
nix = { version = "0.29", features = ["fs", "signal", "socket", "user"] }
portable-pty = "0.8"
libc = "0.2"
signal-hook = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.8"
bcrypt = "0.15"
rpassword = "7.3"
